[gd_scene load_steps=4 format=3 uid="uid://d4ejmido4py1o"]

[ext_resource type="Script" path="res://Plat0.gd" id="1_4tscx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_va7ca"]
radius = 48.0

[sub_resource type="LabelSettings" id="LabelSettings_r21xo"]
font_size = 13

[node name="Plat0" type="Area2D" groups=["Platform"]]
collision_layer = 8
collision_mask = 4
script = ExtResource("1_4tscx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_va7ca")

[node name="DropZone" type="Marker2D" parent="." groups=["Zone"]]
position = Vector2(0, -59)

[node name="Label" type="Label" parent="."]
offset_left = -24.0
offset_top = 16.0
offset_right = 25.0
offset_bottom = 42.0
text = "debug"
label_settings = SubResource("LabelSettings_r21xo")
horizontal_alignment = 1

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
